--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.1.4",
     "@supabase/supabase-js": "^2.44.2",
     "@tailwindcss/forms": "^0.5.7",
+    "marked": "^13.0.2",
     "swiper": "^11.1.4",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
